--- a/html/platformer.css
+++ b/html/platformer.css
@@ -36,6 +36,19 @@
     border:3px solid #FF3333;
 }
 
+.statusText {
+    position:relative;
+    left:0px;
+    bottom:40px;
+    width:100%;
+    text-align:center;
+    font-family:Arial;
+    font-size:18pt;
+    font-weight:bold;
+    color:#CCCC00;
+    text-shadow:2px 2px 2px #000000;
+}
+
 .line {
     float:left;
     width:100%;
